--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.sourceforge.htmlunit</groupId>
+			<artifactId>htmlunit</artifactId>
+			<version>2.69.0</version>
+		</dependency>
 
 		<!-- Databases - Uses H2 by default -->
 		<dependency>
