--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,9 @@
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
+				<includes>
+					<include>**/*.*</include>
+				</includes>
 			</resource>
 		</resources>
 		<plugins>
