page size consolidated to 20 and moved to config file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,5 @@ logging.level.org.springframework=INFO
 spring.web.resources.cache.cachecontrol.max-age=12h
 
 spring.jpa.show-sql=true
+
+soam.pageSize=20
