--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,22 +9,16 @@ spring.thymeleaf.mode=HTML
 # JPA
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=true
-
-# Internationalization
-spring.messages.basename=messages/messages
-
-# Actuator
-management.endpoints.web.exposure.include=*
+spring.jpa.show-sql=true
 
 # Logging
 logging.level.org.springframework=INFO
- logging.level.org.springframework.data=DEBUG
-# logging.level.org.springframework.data=DEBUG
-# logging.level.org.springframework.context.annotation=TRACE
+logging.level.org.springframework.data=DEBUG
+#logging.level.org.springframework.jdbc=TRACE
+#logging.level.org.springframework.transaction.interceptor=TRACE
 
 # Maximum time static resources should be cached
 spring.web.resources.cache.cachecontrol.max-age=12h
 
-spring.jpa.show-sql=true
-
+# SOAM-specific settings
 soam.pageSize=20
