--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # database init, supports mysql too
 database=h2
-spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
+spring.sql.init.schema-locations=classpath*:db/${database}/schema2.sql
 spring.sql.init.data-locations=classpath*:db/${database}/data.sql
 
 # Web
@@ -22,3 +22,5 @@ spring.web.resources.cache.cachecontrol.max-age=12h
 
 # SOAM-specific settings
 soam.pageSize=20
+
+#spring.config.name=soam
