--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ logging.level.org.springframework=INFO
 logging.level.org.springframework.data=DEBUG
 #logging.level.org.springframework.jdbc=TRACE
 #logging.level.org.springframework.transaction.interceptor=TRACE
+#logging.level.org.springframework.orm.jpa=TRACE
 
 # Maximum time static resources should be cached
 spring.web.resources.cache.cachecontrol.max-age=12h
