--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ spring.web.resources.cache.cachecontrol.max-age=12h
 
 # SOAM-specific settings
 soam.pageSize=20
+# Top-level name rendered in the top left corner (by default "SOAM")
+soam.top-entity-name=SOAM
