--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -22,6 +22,6 @@ logging.level.org.springframework.data=DEBUG
 spring.web.resources.cache.cachecontrol.max-age=12h
 
 # SOAM-specific settings
-soam.pageSize=20
+soam.page-size=20
 # Top-level name rendered in the top left corner (by default "SOAM")
 soam.top-entity-name=SOAM
