--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,5 @@ spring.web.resources.cache.cachecontrol.max-age=12h
 soam.page-size=20
 # Top-level name rendered in the top left corner (by default "SOAM")
 soam.top-entity-name=SOAM
+# SOAM deployment mode, PUBLIC | PRIVATE
+soam.access-type=PUBLIC
