access-type renamed to access-mode

--- a/soam.properties
+++ b/soam.properties
@@ -1,4 +1,4 @@
 # Top-level name rendered in the top left corner (by default "SOAM")
 soam.top-entity-name=SOAM
 # SOAM deployment mode, PUBLIC | PRIVATE
-soam.access-type=PUBLIC
+soam.access-mode=PUBLIC
