--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -26,4 +26,4 @@ soam.page-size=20
 # Top-level name rendered in the top left corner (by default "SOAM")
 soam.top-entity-name=SOAM
 # SOAM deployment mode, PUBLIC | PRIVATE
-soam.access-type=PUBLIC
+soam.access-mode=PUBLIC
