soam.page-size exposed in soam.properties

--- a/soam.properties
+++ b/soam.properties
@@ -2,3 +2,5 @@
 soam.top-entity-name=SOAM
 # SOAM deployment mode, PUBLIC | PRIVATE
 soam.access-mode=PUBLIC
+# Page size for UI pagination
+soam.page-size=20
