--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
 			<artifactId>font-awesome</artifactId>
 			<version>${webjars-font-awesome.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery</artifactId>
+			<version>3.6.3</version>
+		</dependency>
 		<!-- end of webjars -->
 
 		<dependency>
