--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
 			<artifactId>jquery</artifactId>
 			<version>3.6.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jstree</artifactId>
+			<version>3.3.14</version>
+		</dependency>
 		<!-- end of webjars -->
 
 		<dependency>
